# sdks

javascript/: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
javascript/src/: client.ts  config.ts  errors.ts  index.ts
javascript/src/modules/endpoints/: index.ts
javascript/src/modules/events/: index.ts  publish-event.ts  publish-events.ts  types.ts
javascript/src/modules/sources/: index.ts
javascript/src/modules/targets/: index.ts
javascript/src/types/: common.ts  endpoints.ts  events.ts  index.ts  sources.ts  targets.ts
javascript/src/utils/: helpers.ts  http.ts  validation.ts
javascript/test/: client.test.ts
javascript/test/modules/: endpoints.test.ts  events.test.ts  sources.test.ts  targets.test.ts
python/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
python/kyrazo/: __init__.py  client.py
python/kyrazo/core/: exceptions.py  http_client.py
python/kyrazo/resources/endpoints/: __init__.py  client.py  models.py
python/kyrazo/resources/events/: __init__.py  client.py  models.py
python/kyrazo/resources/sources/: __init__.py  client.py  models.py
python/kyrazo/resources/targets/: __init__.py  client.py  models.py
python/tests/: conftest.py  test_client.py
python/tests/resources/: test_endpoints.py  test_events.py  test_sources.py  test_targets.py
