[tool.poetry]
name = "kyrazo"
version = "1.0.0"
description = "Official Kyrazo SDK for Python"
authors = ["Kyrazo <support@kyrazo.com>"]
readme = "README.md"
packages = [{include = "kyrazo"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
respx = "^0.20.2"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.plugin",
    "ignore::DeprecationWarning:asyncio",
]
